# Raspberry-pi-fpga-node

./: README.md  pyproject.toml
raspberry_pi_fpga_node/: __main__.py  clues.md  middleware.py
raspberry_pi_fpga_node/core/: broker.py  enums.py  logger.py  s3.py  schemas.py  settings.py
raspberry_pi_fpga_node/external_interaction/: s3.py  schemas.py
raspberry_pi_fpga_node/processing/: command_proccessing_base.py  executor.py  exz.txt  flash.py  handlers.py  lite_lang.py  video_write.py
raspberry_pi_fpga_node/processing/dynamic_files/: clear_flash.svf  output.svf
raspberry_pi_fpga_node/processing/fpga/: command_proccessing_base.py  executor.py  flash.py  lite_lang.py  video_write.py
raspberry_pi_fpga_node/processing/static_confs/: target_fpga.cfg  target_template.cfg  usb_blaster.cfg
raspberry_pi_fpga_node/routers/: avr_topics.py  fgpa_topics.py
